--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ tools/misc/mvpdbg
 tools/mktree/mktree
 tools/mvprelay/mvprelay
 tools/squashfs/squashfs2.2-r2
+tools/squashfs/mksquashfs
+log
+config.log
