--- a/dongle/apps/busybox/SConscript
+++ b/dongle/apps/busybox/SConscript
@@ -23,7 +23,8 @@ cmd = [ 'make oldconfig',
 	'make install',
 	'cp busybox.links %s' % bindir]
 patches = [ 'patches/busybox_config.patch',
-	    'patches/busybox-1.1.3.patch' ]
+	    'patches/busybox-1.1.3.patch',
+	    'patches/dhcp.patch' ]
 
 build = mvpmc.OSSBuild(target, url, env, e, cmd, patches)
 
